--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <script
-      type="text/javascript"
-      src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
-    ></script>
-    <title>Graph Width Visualizer</title>
-  </head>
 
-  <body>
-    <div class="header">
-      <div class="inner_header">
-        <div class="logo_container"><h1>Graph Width Visualizer</h1></div>
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <title>Graph Width Visualizer</title>
+</head>
+
+<body>
+  <div class="header">
+    <div class="inner_header">
+      <div class="logo_container">
+        <h1>Graph Width Visualizer</h1>
       </div>
     </div>
-    <div class="container">
-      <div id="graph-container">
-        <svg id="graph"></svg>
-      </div>
-      <div id="tree-container">
-        <svg id="tree"></svg>
-      </div>
+  </div>
+  <div class="flex-container">
+    <div id="graph-container" class="graphStyle">
+      <svg id="graph" class="graphSvg"></svg>
     </div>
-  </body>
-
+    <div id="tree-container" class="treeStyle">
+      <svg id="tree" class="treeSvg"></svg>
+    </div>
+  </div>
+  <svg id="viz"></svg>
   <script type="text/javascript" src="js/td.js"></script>
+</body>
+
+
+
 </html>
