--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,11 @@
 </head>
 
 <body>
-  <div class="header">
-    <div class="inner_header">
-      <div class="logo_container">
-        <h1>Graph Width Visualizer</h1>
-      </div>
-    </div>
+  <div id="sidenav">
+    <p>Input graph:</p>
+    <input type="file" id="graph-input" />
+    <p>reload a random graph</p>
+    <div id="reload">↺</div>
   </div>
   <div class="flex-container">
     <div id="graph-container" class="graphStyle">
