--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <title>Graph Width Visualizer</title>
 </head>
@@ -24,7 +24,7 @@
     </div>
   </div>
   <svg id="viz"></svg>
-  <script type="text/javascript" src="js/td.js"></script>
+  <script type="text/javascript" src="td.js"></script>
 </body>
 
 
