--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <input type="file" id="graph-input" />
     <p>reload a random graph</p>
     <div id="reload">↺</div>
+    <p>Vertices</p>
+    <p>Edges</p>
+    <p>Treewidth</p>
+    <p>Nice tree decomposition</p>
   </div>
   <div class="flex-container">
     <div id="graph-container" class="graphStyle">
