--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p>Edges</p>
     <p>Treewidth</p>
     <p>Nice tree decomposition</p>
+    <p>Best decomposition</p>
   </div>
   <div class="flex-container">
     <div id="graph-container" class="graphStyle">
