added the ability to upload trees

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <div id="sidenav">
     <p>Input graph:</p>
     <input type="file" id="graph-input" />
+    <p>Input tree decomposition:</p>
+    <input type="file" id="tree-input" />
     <p>reload a random graph</p>
     <div id="reload">↺</div>
     <p>Vertices</p>
@@ -31,7 +33,5 @@
   <svg id="viz"></svg>
   <script type="text/javascript" src="td.js"></script>
 </body>
-
-
 
 </html>
