--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="sidenav">
+  <div class="sidenav">
     <p>Input graph:</p>
     <input type="file" id="fileUpload" />
     <p>Reload a random graph</p>
@@ -26,7 +26,6 @@
       <svg id="tree" class="treeSvg"></svg>
     </div>
   </div>
-  <svg id="viz"></svg>
   <script type="text/javascript" src="td.js"></script>
 </body>
 
