restructure of files and folders

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,6 @@
       <svg id="tree" class="treeSvg"></svg>
     </div>
   </div>
-  <script type="text/javascript" src="td.js"></script>
+  <script type="text/javascript" src="js/td.js"></script>
 </body>
-
 </html>
