--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <script type="module" src="js/main.js"></script>
   <script type="module" src="js/tree.js"></script>
   <script type="module" src="js/graph.js"></script>
+  <script type="module" src="js/drawGraph.js"></script>
+  <script src="https://unpkg.com/jeezy@1.11.2/lib/jeezy.min.js"></script>
   <title>Graph Width Visualizer</title>
 </head>
 
@@ -37,18 +39,24 @@
       <label for="numbers">Numbers</label><br />
     </div>
     <br />
-    <span id="reload">↺</span>
+    <span id="reloadRandomGraph">↺</span>
     <p>Input graph:</p>
     <input type="file" id="fileUpload" />
     <br />
     <button id="compute" name="compute">Compute tree decomposition</button>
     <div>
-      <button id="drawgraph" name="drawgraph">Draw graph</button>
+      <button id="startanimation" name="startanimation">Start Animation</button>
+    </div>
+    <div>
+      <button id="drawGraphButton">Draw graph</button>
     </div>
   </div>
   <div class="flex-container">
     <div id="graph-container" class="graphStyle">
-      <svg id="graph" class="graphSvg"></svg>
+      <div id="drawGraph" class="drawGraph"></div>
+      <div id="graph" class="graphSvg"></div>
+      <!-- <svg id="drawGraph" class="drawGraphSvg"></svg> -->
+      <!-- <svg id="graph" class="graphSvg"></svg> -->
     </div>
     <div id="tree-container" class="treeStyle">
       <div class="text_container hidden">
@@ -56,8 +64,7 @@
           <div class="loader"></div>
         </div>
       </div>
-
-      <svg id="tree" class="treeSvg"></svg>
+      <div id="tree" class="treeSvg"></div>
     </div>
   </div>
 
