updated tree algorithm

--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,13 @@
     <div class="number-of-vertices">
       <p># of vertices</p>
       <span id="verticesLeftArrow">⯇</span>
-      <input type="text" id="numberOfVertices" value="5" />
+      <input type="text" id="numberOfVertices" value="10" />
       <span id="verticesRightArrow">⯈</span>
     </div>
     <div class="number-of-links">
       <p># of edges</p>
       <span id="edgesLeftArrow">⯇</span>
-      <input type="text" id="numberOfEdges" value="5" />
+      <input type="text" id="numberOfEdges" value="10" />
       <span id="edgesRightArrow">⯈</span>
     </div>
     <br />
@@ -40,7 +40,7 @@
       <label for="numbers">Numbers</label><br />
     </div>
     <br />
-    <span id="reload">↺</span>
+    
     <p>Input graph:</p>
     <input type="file" id="fileUpload" />
     <div>
@@ -53,6 +53,7 @@
     <div>
       <button id="computeNiceTree">Compute nice tree decomposition</button>
     </div>
+    <span id="reloadRandomGraph">↺</span>
 
   </div>
   <div class="flex-container">
