--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script type="module" src="js/main.js"></script>
@@ -18,19 +20,20 @@
 
 <body>
   <div class="sidenav">
-    <p>Generate random graph:</p>
-
-    <div class="number-of-vertices">
-      <p># of vertices</p>
-      <span id="verticesLeftArrow">⯇</span>
-      <input type="text" id="numberOfVertices" value="10" />
-      <span id="verticesRightArrow">⯈</span>
-    </div>
-    <div class="number-of-links">
-      <p># of edges</p>
-      <span id="edgesLeftArrow">⯇</span>
-      <input type="text" id="numberOfEdges" value="10" />
-      <span id="edgesRightArrow">⯈</span>
+    <h2 class="random-style">GRAPH WIDTH <br /> VISUALIZER</h2>
+    <p>vertices</p>
+    <div class="random-generator">
+      <div class="number-of-vertices">
+        <span id="verticesLeftArrow"><i class="material-icons md-36">keyboard_arrow_left</i></span>
+        <input type="text" id="numberOfVertices" value="10" />
+        <span id="verticesRightArrow"><i class="material-icons md-36">keyboard_arrow_right</i></span>
+      </div>
+      <p>edges</p>
+      <div class="number-of-links">
+        <span id="edgesLeftArrow"><i class="material-icons md-36">keyboard_arrow_left</i></span>
+        <input type="text" id="numberOfEdges" value="10" />
+        <span id="edgesRightArrow"><i class="material-icons md-36">keyboard_arrow_right</i></span>
+      </div>
     </div>
     <br />
     <div>
@@ -39,21 +42,23 @@
       <input type="radio" id="numbers" name="type" />
       <label for="numbers">Numbers</label><br />
     </div>
-    <br />
-    
+    <span id="reloadRandomGraph">↺</span>
+
+
     <p>Input graph:</p>
     <input type="file" id="fileUpload" />
+
     <div>
       <!-- <button id="drawGraphButton">Draw graph</button> -->
     </div>
+    <div class="algorithms-title">Algorithms:</div>
     <br />
-    <div>
-      <button id="compute" name="compute">Compute tree decomposition</button>
+    <div class="buttons">
+      <div id="compute">Tree Decomposition</div>
+      <div id="computeNiceTree">Nice Tree Decomposition</div>
+      <div id="bfs">BFS</div>
     </div>
-    <div>
-      <button id="computeNiceTree">Compute nice tree decomposition</button>
-    </div>
-    <span id="reloadRandomGraph">↺</span>
+
 
   </div>
   <div class="flex-container">
