added mis algorithm

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
       <div id="compute">Tree Decomposition</div>
       <div id="computeNiceTree">Nice Tree Decomposition</div>
       <div id="bfs">BFS</div>
+      <div id="mis">Max Independent Set</div>
     </div>
 
 
