added k-coloring algorithm

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
       <div id="computeNiceTree">Nice Tree Decomposition</div>
       <div id="bfs">BFS</div>
       <div id="mis">Max Independent Set</div>
+      <div id="three-color">3-Coloring</div>
+      <div id="graph-coloring">Graph Coloring</div>
     </div>
 
 
