--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="./Graph.ico" />
   <script type="module" src="js/main.js"></script>
   <script type="module" src="js/niceTreeDecomposition.js"></script>
   <script type="module" src="js/graphFactory.js"></script>
@@ -58,7 +59,8 @@
       <div id="computeNiceTree">Nice Tree Decomposition</div>
       <div id="three-color">3-Coloring</div>
     </div>
-
+    <a href="https://iconscout.com/icons/graph" target="_blank">Graph Icon</a> by <a
+      href="https://iconscout.com/contributors/evil-icons" target="_blank">Evil Icons</a>
 
   </div>
   <div class="flex-container">
