fixed tree layout

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div id="nice-td-container">
-        <svg id="nice-td-svg"></svg>
+        <!-- <svg id="nice-td-svg"></svg> -->
       </div>
     </div>
   </div>
