--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,15 @@
         <svg id="graphSvg"></svg>
       </div>
       <div id="td-container">
+        <table class="table">
+          <tr>
+            <th>Set</th>
+            <th>MIS</th>
+          </tr>
+          <tbody id="tbody">
+          </tbody>
+        </table>
+        <div id="output-text"></div>
         <div class="text_container hidden">
           <div>
             <div class="loader"></div>
