--- a/public/index.html
+++ b/public/index.html
@@ -101,9 +101,6 @@
       data-intro='Run the algorithms on the nice tree decomposition using dynamic programming with any of the algorithms below'
       class="step3">Step 3</h3>
     <div class="buttons">
-      <div id="three-color">
-        <p>3-Coloring</p>
-      </div>
       <div id="max-independent-set">
         <p>Max Independent Set</p>
       </div>
@@ -116,14 +113,14 @@
         <svg id="graphSvg"></svg>
       </div>
       <div id="td-container">
-        <table class="table">
+        <!--         <table class="table">
           <tr>
             <th>Set</th>
             <th>MIS</th>
           </tr>
           <tbody id="tbody">
           </tbody>
-        </table>
+        </table> -->
         <div id="output-text"></div>
         <div class="text_container hidden">
           <div>
@@ -135,11 +132,11 @@
     </div>
     <div class="right-container">
       <div class="nice-td-info">
-        <p>Root node is <span class="root-node-color">orange</span></p>
+        <!--         <p>Root node is <span class="root-node-color">orange</span></p>
         <p>Join nodes are <span class="join-node-color">blue</span></p>
         <p>Introduce nodes are <span class="introduce-node-color">green</span></p>
         <p>Forget nodes are <span class="forget-node-color">red</span></p>
-        <p>Leaf nodes are <span class="leaf-node-color">black</span></p>
+        <p>Leaf nodes are <span class="leaf-node-color">black</span></p> -->
       </div>
       <div id="nice-td-container"></div>
     </div>
